Added VespaCFD description.

--- a/README
+++ b/README
@@ -17,3 +17,8 @@ SCII
 
 Scooter Computer II - a tablet pc hooked up to a Vespa via a LabJack.
 http://www.vespalabs.org/Projects/Scooter_Computer_II
+
+VespaCFD
+
+Some helper utils for doing stuff with CFD (Computational Fluid Dynamics), specifically STL mesh manipulation.
+http://www.vespalabs.org/Projects/Vespa_CFD%2F%2F3D_Model
